<resources>
    <string name="app_name">Do Not Disturb Sync</string>
    <string name="activity_info">Having launched this app once allows it to monitor Do Not Disturb mode changes.\n\nPlease launch the watch app once too.</string>
    <string name="activity_permission_info">A special permission is needed to set the Do Not Disturb mode.</string>
    <string name="button_grant_permission">Grant permission</string>
    <string name="activity_phone_to_watch_sync">To enable Do Not Disturb Sync from Phone to Watch, please read the Play Store description.</string>
    <string name="error_no_permission_activity">Failed to open the Do Not Disturb Access settings. Please enable the permission manually.</string>
    <string name="activity_settings_title">Settings</string>
    <string name="action_settings">Settings</string>
    <string name="activity_permission_status_granted">Permission: Granted</string>

    <string name="settings_category_phone_settings">Phone settings</string>
    <string name="settings_category_debug_settings">Debug settings</string>
    <string name="settings_use_ringer_mode_title">Use ringer mode</string>
    <string name="settings_use_ringer_mode_on_description">Set DND mode by changing Ringer mode (old default)</string>
    <string name="settings_use_ringer_mode_off_description">Set DND mode by changing Notification filter (default)</string>
    <string name="settings_preferred_dnd_mode_title">Preferred Do Not Disturb mode</string>
    <string name="settings_preferred_dnd_mode_summary">Set phone to %1$s mode when Do Not Disturb is toggled on the watch</string>
    <string name="settings_dnd_permission_granted">Status: Granted</string>
    <string name="settings_dnd_permission_denied">Status: Not granted</string>
    <string name="settings_dnd_permission_granted_toast">Permission has already been granted</string>

</resources>
