<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="se.blunden.donotdisturbsync.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:showIn="@layout/activity_main">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="@string/activity_info" />

            <TextView
                android:id="@+id/permission_info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="32dp"
                android:paddingBottom="16dp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:text="@string/activity_permission_info" />

            <Button
                android:id="@+id/button_permission"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="@android:color/white"
                android:text="@string/button_grant_permission"/>

        </LinearLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
